--- a/TheFoodLab/Views/BackOffice/Login.cshtml
+++ b/TheFoodLab/Views/BackOffice/Login.cshtml
@@ -5,7 +5,7 @@
 
 @using TheFoodLab.Models;
 
-@model Usuario
+@model Moderadores
 
 @Html.BeginForm("Loguearse", "BackOffice", FormMethod.Post) {
 
