Menú BO Terminado

--- a/TheFoodLab/Views/BackOffice/Index.cshtml
+++ b/TheFoodLab/Views/BackOffice/Index.cshtml
@@ -46,7 +46,7 @@
             </div>
             <div class="feature-inner row">
                 <div class="col-lg-4 col-md-6">
-                    <a href='@Url.Action("ABMLIngredientes", "BackOffice")'>
+                    <a href='@Url.Action("ABMIngredientes", "BackOffice")'>
                         <div class="feature-item">
                             <h4>Ingredientes</h4>
                             <div class="wow fadeIn" data-wow-duration="1s" data-wow-delay=".1s">
@@ -58,7 +58,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <a href='@Url.Action("BMLRecetas", "BackOffice")'>
+                    <a href='@Url.Action("BMRecetas", "BackOffice")'>
                         <div class="feature-item">
                             <h4>Recetas</h4>
                             <div class="wow fadeIn" data-wow-duration="1s" data-wow-delay=".3s">
@@ -70,7 +70,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <a href='@Url.Action("BMLReceteros", "BackOffice")'>
+                    <a href='@Url.Action("BMReceteros", "BackOffice")'>
                         <div class="feature-item">
                             <h4>Receteros</h4>
                             <div class="wow fadeIn" data-wow-duration="1s" data-wow-delay=".5s">
@@ -82,7 +82,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <a href='@Url.Action("ABMLTiposDeComidas", "BackOffice")'>
+                    <a href='@Url.Action("ABMTiposDeComidas", "BackOffice")'>
                         <div class="feature-item">
                             <h4>Tipos de comidas</h4>
                             <div class="wow fadeIn" data-wow-duration="1s" data-wow-delay=".1s">
