--- a/TheFoodLab/Views/BackOffice/BMRecetas.cshtml
+++ b/TheFoodLab/Views/BackOffice/BMRecetas.cshtml
@@ -3,37 +3,28 @@
     ViewBag.Title = "BMRecetas";
 }
 
-@using TheFoodLab.Models;
-@model BD;
+@using TheFoodLab.Models
 @model Receta;
+@model BD;
 
 <html>
 <head>
     <link rel="stylesheet" href="~/Content/Site.css">
 </head>
 <body>
-    @foreach (Receta aux in ViewBag.ListaTodasNoticias)
+
+
+    @foreach (Receta aux in ViewBag.ListaRecetas)
     {
         <div style="padding-bottom: 20px;"></div>
         <div id="TituloBack">
             <tr>
-                <td><a href="@Url.Action("Detalle", "Home", new { idNoticia = aux.IdReceta })" title="@aux.Titulo1">@aux.Titulo1</a></td>
+                <td><a href="@Url.Action("Detalle", "Home", new { idReceta = aux.IdReceta })" title="@aux.Titulo1">@aux.Titulo1</a></td>
                 <td>@Html.ActionLink("Editar Noticia", "Accion", "Backoffice", new { Accion = "Editar", Id = aux.IdReceta }, null)</td>
 
-
-                @if (aux.Destacada)
-                {
-                    <td>DESTACADA</td>
-                }
-                else
-                {
-                    <td>No destacada</td>
-                }
-
-
-                <td><a href="@Url.Action("Destacar","BackOffice", new {Destacar=aux.IdNoticia})" title="Destacar">Destacar</a></td>"
             </tr>
         </div>
     }
 </body>
 </html>
+
