--- a/TheFoodLab/Views/BackOffice/ABMIngredientes.cshtml
+++ b/TheFoodLab/Views/BackOffice/ABMIngredientes.cshtml
@@ -2,6 +2,9 @@
 @{
     ViewBag.Title = "ABMIngredientes";
 }
-
-<h2>ABMIngredientes</h2>
+<head>
+</head>
+<body>
+    <h2>ABMIngredientes</h2>
+</body>
 
