--- a/TheFoodLab/Content/bootstrap.css
+++ b/TheFoodLab/Content/bootstrap.css
@@ -58,7 +58,8 @@ html {
 }
 
 body {
-  margin: 0;
+    margin: 0;
+    padding-top: 120px;
 }
 
 a:focus {
@@ -74,6 +75,7 @@ h1 {
   margin: 0.67em 0;
   font-size: 2em;
 }
+
 
 abbr[title] {
   border-bottom: 1px dotted;
@@ -311,11 +313,12 @@ html {
 }
 
 body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  line-height: 1.428571429;
-  color: #333333;
-  background-color: #ffffff;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 14px;
+    line-height: 1.428571429;
+    color: #333333;
+    background-color: #ffffff;
+    padding-top: 120px;
 }
 
 input,
