--- a/TheFoodLab/Content/css/main.css
+++ b/TheFoodLab/Content/css/main.css
@@ -48,6 +48,7 @@ body {
   font-size: 16px;
   font-weight: 400;
   line-height: 1.625em;
+  padding-top: 120px;
   position: relative; }
 
 ol, ul {
@@ -97,7 +98,10 @@ a, a:focus, a:hover {
 
 .gray-bg {
   background: #f9f9ff; }
-
+ h2{
+paddin-top:70px;
+ }
+  
 h1, h2, h3,
 h4, h5, h6 {
   font-family: "Montserrat", sans-serif;
