--- a/TheFoodLab/Views/Shared/_Layout.cshtml
+++ b/TheFoodLab/Views/Shared/_Layout.cshtml
@@ -3,38 +3,94 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>TheFoodLab</title>
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
+    <!-- Mobile Specific Meta -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Favicon-->
+    <link rel="shortcut icon" href="img/fav.png">
+    <!-- Author Meta -->
+    <meta name="author" content="codepixer">
+    <!-- Meta Description -->
+    <meta name="description" content="">
+    <!-- Meta Keyword -->
+    <meta name="keywords" content="">
+    <!-- meta character set -->
+    <meta charset="UTF-8">
+    <!-- Site Title -->
+    <title>Courses</title>
+    <!--
+            Google Font
+            ============================================= -->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,500,600" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500i" rel="stylesheet">
+    <!--
+            CSS
+            ============================================= -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/themify-icons/0.1.2/css/themify-icons.css">
+    <link rel="stylesheet" href="../../Content/css/linearicons.css">
+    <link rel="stylesheet" href="../../Content/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../../Content/css/bootstrap.css">
+    <link rel="stylesheet" href="../../Content/css/magnific-popup.css">
+    <link rel="stylesheet" href="../../Content/css/nice-select.css">
+    <link rel="stylesheet" href="../../Content/css/animate.min.css">
+    <link rel="stylesheet" href="../../Content/css/owl.carousel.css">
+    <link rel="stylesheet" href="../../Content/css/main.css">
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <header id="header">
         <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                </ul>
+            <div class="row align-items-center justify-content-between d-flex">
+                <div id="logo">
+                    <a href="index.html"><img src="~/Content/img/logo4.png" alt="" title="" size: 10px /></a>
+                </div>
+                <nav id="nav-menu-container">
+                    <ul class="nav-menu">
+                        <li class="menu-active"><a href="index.html">Home</a></li>
+                        <li class="menu-has-children">
+                            <a href="">Filtros</a>
+                            <ul>
+                                <li class="menu-has-children">
+                                    <a href="">Duración</a>
+                                    <ul>
+                                        <li class="menu-has-children"><a href="">1-5min</a>
+                                        <li class="menu-has-children"><a href="">5-15min</a>
+                                        <li class="menu-has-children"><a href="">15-30min</a>
+                                        <li class="menu-has-children"><a href="">+30min</a>
+                                    </ul>
+                                <li class="menu-has-children">
+                                    <a href="">Dificultad</a>
+                                    <ul>
+                                        <li class="menu-has-children"><a href="">Simple</a>
+                                        <li class="menu-has-children"><a href="">Normal</a>
+                                        <li class="menu-has-children"><a href="">Dificil</a>
+                                    </ul>
+                                <li class="menu-has-children">
+                                    <a href="">Tipo de comida</a>
+                                    <ul>
+                                        <li class="menu-has-children"><a href="">Salado</a>
+                                        <li class="menu-has-children"><a href="">Dulce</a>
+                                    </ul>
+                            </ul>
+                        </li>
+                        <li><a href="about.html">Receteros</a></li>
+                        <li><a href="courses.html">Login</a></li>
+                        <li><a href="contact.html">Registrarse</a></li>
+                    </ul>
+                </nav><!-- #nav-menu-container -->
             </div>
         </div>
-    </div>
-
+    </header>
+    
     <div class="container body-content">
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Developed by TRIPLE W</p>
         </footer>
     </div>
-
-    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
-    <script src="~/Scripts/bootstrap.min.js"></script>
 </body>
+
 </html>
