--- a/TheFoodLab/Views/Shared/_Layout.cshtml
+++ b/TheFoodLab/Views/Shared/_Layout.cshtml
@@ -88,7 +88,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Developed by TRIPLE W</p>
+            <p>&copy; @DateTime.Now.Year - Developed by TRIPLE W™</p>
         </footer>
     </div>
 </body>
