--- a/TheFoodLab/Content/css/bootstrap.css
+++ b/TheFoodLab/Content/css/bootstrap.css
@@ -259,6 +259,7 @@ button {
 button:focus {
     outline: 1px dotted;
     outline: 5px auto -webkit-focus-ring-color
+	padding-top:10px;
 }
 
 button,
@@ -266,7 +267,6 @@ input,
 optgroup,
 select,
 textarea {
-    margin: 0;
     font-family: inherit;
     font-size: inherit;
     line-height: inherit
@@ -2414,6 +2414,7 @@ textarea.form-control {
 }
 
 .btn {
+	padding-top: 50px;
     display: inline-block;
     font-weight: 400;
     text-align: center;
@@ -2425,7 +2426,7 @@ textarea.form-control {
     user-select: none;
     border: 1px solid transparent;
     padding: .375rem .75rem;
-    font-size: 1rem;
+    font-size: 2rem;
     line-height: 1.5;
     border-radius: .25rem;
     transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out
