--- a/TheFoodLab/Views/BackOffice/Login.cshtml
+++ b/TheFoodLab/Views/BackOffice/Login.cshtml
@@ -7,12 +7,16 @@
         }
         @using TheFoodLab.Models;
         @model Moderadores
-        @Html.BeginForm("Loguearse", "BackOffice", FormMethod.Post) {
+        @using (Html.BeginForm("Loguearse", "BackOffice", FormMethod.Post))
+        {
 
         <h4 style="padding-top:50px; color:red;">@ViewBag.Error</h4>
         <br />
         <p>Username:</p> @Html.TextBoxFor(model => model.Username) @Html.ValidationMessageFor(model => model.Username)<br />
         <p style="padding-top:20px;">Password:</p> @Html.PasswordFor(model => model.Password) @Html.ValidationMessageFor(model => model.Password) <br />
-        <input type="submit" value="Enviar" />
+        <div class="py-3">
+        <input type="submit" value="Enviar" class="btn"/>
+        </div>
+        }
     </div>
 </body>
