--- a/TheFoodLab/Views/BackOffice/BMRecetas.cshtml
+++ b/TheFoodLab/Views/BackOffice/BMRecetas.cshtml
@@ -3,25 +3,15 @@
 }
 
 @using TheFoodLab.Models
-@model Receta;
-@model BD;
-<html>
-<head>
-    <link rel="stylesheet" href="~/Content/Site.css">
-</head>
-<body>
+@model Receta
     @foreach (Receta aux in ViewBag.ListaRecetas)
     {
         <div style="padding-bottom: 20px;"></div>
-        <div id="TituloBack">
             <tr>
                 <td><a href="@Url.Action("Detalle", "Home", new { idReceta = aux.IdReceta })" title="@aux.Titulo1">@aux.Titulo1</a></td>
                 <td>@Html.ActionLink("Editar Receta", "Accion", "Backoffice", new { Accion = "Editar", Id = aux.IdReceta }, null)</td>
                 <td>@Html.ActionLink("Eliminar Receta", "Accion", "Backoffice", new { Accion = "Eliminar", Id = aux.IdReceta }, null)</td>
             </tr>
-        </div>
     }
-</body>
-</html>
 
 
