--- a/TheFoodLab/Views/Shared/_Layout.cshtml
+++ b/TheFoodLab/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
         <div class="container">
             <div class="row align-items-center justify-content-between d-flex">
                 <div id="logo">
-                    <a href="index.html"><img src="~/Content/img/logo4.png" alt="" title="" size: 10px /></a>
+                    <a href='@Url.Action("Index", "BackOffice")'><img src="~/Content/img/logo4.png" alt="" title="" size: 10px /></a>
                 </div>
                 <nav id="nav-menu-container">
                     <ul class="nav-menu">
