--- a/TheFoodLab/Views/Shared/_Layout.cshtml
+++ b/TheFoodLab/Views/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
                 </div>
                 <nav id="nav-menu-container">
                     <ul class="nav-menu">
-                        <li class="menu-active"><a href="index.html">Home</a></li>
+                        <li class="menu-active"><a href='@Url.Action("Index", "Front")'>Home</a></li>
                         <li class="menu-has-children">
                             <a href="">Filtros</a>
                             <ul>
