--- a/TheFoodLab/Content/css/main.css
+++ b/TheFoodLab/Content/css/main.css
@@ -1794,7 +1794,19 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 .home-banner-area {
   background: url(../img/header-bg.png) no-repeat top center;
-  background-size: auto; }
+  background-size: auto; 
+  width: 100%;
+    height: 45%;
+    max-width: 2048px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
+    margin: 0 auto;
+	padding-top: 10px;
+    overflow: hidden;}
   @media (max-width: 767.98px) {
     .home-banner-area .fullscreen {
       height: 900px !important; } }
@@ -1822,7 +1834,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   margin-top: 100px; }
   @media (max-width: 1440px) {
     .banner-content {
-      margin-top: 0; } }
+      margin-top: 80px; } }
   .banner-content h1 {
     color: #fff;
 	padding-top: 80px;
@@ -1989,7 +2001,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   margin-right: 20px; }
 
 .feature-area {
-  padding: 150px 0 120px; }
+  padding: 30px; }
   @media (max-width: 991px) {
     .feature-area {
       padding: 80px 0px; } }
@@ -2020,7 +2032,8 @@ body.mobile-nav-active #mobile-nav-toggle {
     box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 0.08); }
 
 .faculty-area {
-  background-color: #f1f9ff; }
+  background-color: #f1f9ff; 
+  padding-top: 800px;}
 
 .single-faculty .thumb {
   position: relative;
