--- a/TheFoodLab/Views/Front/Login.cshtml
+++ b/TheFoodLab/Views/Front/Login.cshtml
@@ -11,14 +11,14 @@
             ViewBag.Title = "Login";
         }
         @using TheFoodLab.Models;
-        @model Moderadores
-        @using (Html.BeginForm("Loguearse", "BackOffice", FormMethod.Post))
+        @model Receteros
+        @using (Html.BeginForm("Loguearse", "Front", FormMethod.Post))
         {
 
             <h4 style="padding-top:50px; color:red;">@ViewBag.Error</h4>
             <br />
-            <p>Username:</p> @Html.TextBoxFor(model => model.Username) @Html.ValidationMessageFor(model => model.Username)<br />
-            <p style="padding-top:20px;">Password:</p> @Html.PasswordFor(model => model.Password) @Html.ValidationMessageFor(model => model.Password) <br />
+            <p>Username:</p> @Html.TextBoxFor(model => model.Username1) @Html.ValidationMessageFor(model => model.Username1)<br />
+            <p style="padding-top:20px;">Password:</p> @Html.PasswordFor(model => model.Password1) @Html.ValidationMessageFor(model => model.Password1) <br />
             <div class="py-3">
                 <input type="submit" value="Enviar" class="btn" />
             </div>
