--- a/TheFoodLab/Views/Shared/_Layout.cshtml
+++ b/TheFoodLab/Views/Shared/_Layout.cshtml
@@ -76,7 +76,7 @@
                             </ul>
                         </li>
                         <li><a href="about.html">Receteros</a></li>
-                        <li><a href="courses.html">Login</a></li>
+                        <li><a href="@Url.Action("Login", "Front")">Login</a></li>
                         <li><a href="contact.html">Registrarse</a></li>
                     </ul>
                 </nav><!-- #nav-menu-container -->
