--- a/TheFoodLab/Content/css/bootstrap.css
+++ b/TheFoodLab/Content/css/bootstrap.css
@@ -282,6 +282,23 @@ select {
     text-transform: none
 }
 
+.centrar{
+		position: absolute;
+		/*nos posicionamos en el centro del navegador*/
+		top:50%;
+		left:50%;
+		/*determinamos una anchura*/
+		width:400px;
+		/*indicamos que el margen izquierdo, es la mitad de la anchura*/
+		margin-left:-200px;
+		/*determinamos una altura*/
+		height:300px;
+		/*indicamos que el margen superior, es la mitad de la altura*/
+		margin-top:-150px;
+		border:1px solid #808080;
+		padding:5px;
+}
+
 [type=reset],
 [type=submit],
 button,
