--- a/TheFoodLab/Views/Shared/_Layout.cshtml
+++ b/TheFoodLab/Views/Shared/_Layout.cshtml
@@ -77,7 +77,7 @@
                         </li>
                         <li><a href="about.html">Receteros</a></li>
                         <li><a href="@Url.Action("Login", "Front")">Login</a></li>
-                        <li><a href="contact.html">Registrarse</a></li>
+                        <li><a href="@Url.Action("Registrarse", "Front")">Registrarse</a></li>
                     </ul>
                 </nav><!-- #nav-menu-container -->
             </div>
