--- a/TheFoodLab/Content/css/main.css
+++ b/TheFoodLab/Content/css/main.css
@@ -2046,7 +2046,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   bottom: -30px; }
 .single-faculty .meta-text {
   padding: 60px 30px 40px;
-  background: #fff; }
+  background: #64deb6; }
   @media (max-width: 1024px) {
     .single-faculty .meta-text {
       padding: 60px 20px 40px; } }
