--- a/TheFoodLab/Views/Front/Index.cshtml
+++ b/TheFoodLab/Views/Front/Index.cshtml
@@ -54,84 +54,19 @@
                     </div>
                 </div>
             </div>
-            <div class="row justify-content-center d-flex align-items-center">
-                <div class="col-lg-3 col-md-6 col-sm-12 single-faculty">
-                    <div class="thumb d-flex justify-content-center">
-                        <img class="img-fluid" src="~/Content/img/faculty/f1.jpg" alt="">
-                    </div>
-                    <div class="meta-text text-center">
-                        <h4>Ethel Davis</h4>
-                        <p class="designation">Sr. Faculty Data Science</p>
-                        <div class="info wow fadeIn" data-wow-duration="1s" data-wow-delay=".1s">
-                            <p>
-                                If you are looking at blank cassettes on the web, you may be very confused at the difference in price.
-                            </p>
+            <div class="row justify-content-center d-flex align-items-baseline">
+                @foreach (Receta Rec in ViewBag.ListaDestacadas)
+                {
+                    <div data-grid="container" class="col-lg-3 col-md-6 col-sm-12 single-faculty">
+                        <div class="thumb d-flex justify-content-center">
+                            <img class="img-fluid" src="~/Content/img/@Rec.NombreImagen1" alt="">
                         </div>
-                        <div class="align-items-center justify-content-center d-flex">
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-linkedin"></i></a>
+                        <div class="meta-text text-center">
+                            <h4>@Rec.Titulo1</h4>
                         </div>
                     </div>
+                 }
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-12 single-faculty">
-                    <div class="thumb d-flex justify-content-center">
-                        <img class="img-fluid" src="~/Content/img/faculty/f2.jpg" alt="">
-                    </div>
-                    <div class="meta-text text-center">
-                        <h4>Rodney Cooper</h4>
-                        <p class="designation">Sr. Faculty Data Science</p>
-                        <div class="info wow fadeIn" data-wow-duration="1s" data-wow-delay=".3s">
-                            <p>
-                                If you are looking at blank cassettes on the web, you may be very confused at the difference in price.
-                            </p>
-                        </div>
-                        <div class="align-items-center justify-content-center d-flex">
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-linkedin"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-12 single-faculty">
-                    <div class="thumb d-flex justify-content-center">
-                        <img class="img-fluid" src="~/Content/img/faculty/f3.jpg" alt="">
-                    </div>
-                    <div class="meta-text text-center">
-                        <h4>Dora Walker</h4>
-                        <p class="designation">Sr. Faculty Data Science</p>
-                        <div class="info wow fadeIn" data-wow-duration="1s" data-wow-delay=".5s">
-                            <p>
-                                If you are looking at blank cassettes on the web, you may be very confused at the difference in price.
-                            </p>
-                        </div>
-                        <div class="align-items-center justify-content-center d-flex">
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-linkedin"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-12 single-faculty">
-                    <div class="thumb d-flex justify-content-center">
-                        <img class="img-fluid" src="~/Content/img/faculty/f4.jpg" alt="">
-                    </div>
-                    <div class="meta-text text-center">
-                        <h4>Lena Keller</h4>
-                        <p class="designation">Sr. Faculty Data Science</p>
-                        <div class="info wow fadeIn" data-wow-duration="1s" data-wow-delay=".7s">
-                            <p>
-                                If you are looking at blank cassettes on the web, you may be very confused at the difference in price.
-                            </p>
-                        </div>
-                        <div class="align-items-center justify-content-center d-flex">
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-linkedin"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </div>
     </section>
     <!-- End Faculty Area -->
