--- a/TheFoodLab/Views/Shared/_Layout.cshtml
+++ b/TheFoodLab/Views/Shared/_Layout.cshtml
@@ -83,7 +83,7 @@
                         }
                         else
                         {
-                            <li><a href="@Url.Action("MisRecetas", "Front")">Mis Recetas</a></li>
+                            <li><a href="@Url.Action("RecetasxReceteero", "Front")">Mis Recetas</a></li>
                         }
                         <li><a href="@Url.Action("Registrarse", "Front")">Registrarse</a></li>
                     </ul>
